--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             android:name=".Views.InQuizActivity"
             android:label="@string/title_activity_in_quiz"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Views.QuizActivity"></activity>
+        <activity android:name=".Views.QuizActivity" />
+        <activity android:name=".Views.IntroductionActivity"></activity>
     </application>
 
 </manifest>
