--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".QuizApp">
         <activity android:name=".Views.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,10 +17,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Views.InQuizActivity"
-            android:label="@string/title_activity_in_quiz"
-            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Views.QuizActivity" />
         <activity android:name=".Views.IntroductionActivity" />
         <activity android:name=".Views.AnswerActivity" />
